--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
 	
 	<div class="container">	
 		<section class="content">
-			<table class="table table-bordered table-hover mt-5">
+			<table class="table table-bordered table-responsive-sm table-hover mt-5">
 				<thead class="thead-light">
 					<tr>
 						<th>Interface</th>
