--- a/templates/index.html
+++ b/templates/index.html
@@ -22,13 +22,13 @@
 				<form class="float-right" method = "POST" action=" ">
 					<div class="form-row">
 						<div class="form-group col-md-3 my-2">
-							<input type="Hostname" class="form-control" placeholder="Hostname" name="hostname">
+							<input type="Hostname" class="form-control" placeholder="Hostname" name="hostname" required>
 						</div>
 						<div class="form-group col-md-3 my-2">
-							<input type="Username" class="form-control" placeholder="Username" name="username">
+							<input type="Username" class="form-control" placeholder="Username" name="username" required>
 						</div>
 						<div class="form-group col-md-3 my-2">
-							<input type="password" class="form-control" placeholder="Password" name="password">
+							<input type="password" class="form-control" placeholder="Password" name="password" required>
 						</div>
 						<div class="form-group col-md-3 my-2">
 							<button type="submit" class="btn btn-primary col">Sign In</button>
@@ -41,7 +41,7 @@
 	
 	<div class="container">	
 		<section class="content">
-			<table class="table table-bordered table-responsive-sm table-hover mt-5">
+			<table class="table table-responsive-sm table-bordered table-hover mt-5">
 				<thead class="thead-light">
 					<tr>
 						<th>Interface</th>
