--- a/templates/index.html
+++ b/templates/index.html
@@ -24,13 +24,16 @@
 						<div class="form-group col-md-3 my-2">
 							<input type="Hostname" class="form-control" placeholder="Hostname" name="hostname" required>
 						</div>
+						<div class="form-group col-md-1 my-2">
+							<input type="Port" class="form-control" placeholder="Port" name="port" value="22">
+						</div>
 						<div class="form-group col-md-3 my-2">
 							<input type="Username" class="form-control" placeholder="Username" name="username" required>
 						</div>
 						<div class="form-group col-md-3 my-2">
 							<input type="password" class="form-control" placeholder="Password" name="password" required>
 						</div>
-						<div class="form-group col-md-3 my-2">
+						<div class="form-group col-md-2 my-2">
 							<button type="submit" class="btn btn-primary col">Sign In</button>
 						</div>	
 					</div>
